--- a/solutions/index.html
+++ b/solutions/index.html
@@ -9,18 +9,18 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-91e6bf71.js">
+		<link rel="modulepreload" href="/_app/start-4c45d237.js">
 		<link rel="modulepreload" href="/_app/chunks/vendor-6f794801.js">
 		<link rel="modulepreload" href="/_app/chunks/singletons-12a22614.js">
 		<link rel="modulepreload" href="/_app/chunks/paths-28a87002.js">
 		<link rel="modulepreload" href="/_app/pages/__layout.svelte-546603c3.js">
-		<link rel="modulepreload" href="/_app/pages/solutions.svelte-c6519aea.js">
+		<link rel="modulepreload" href="/_app/pages/solutions.svelte-2a5ef4a2.js">
 		<link rel="stylesheet" href="/_app/assets/start-464e9d0a.css">
 		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-05c27513.css">
 		<link rel="stylesheet" href="/_app/assets/pages/solutions.svelte-970530fd.css">
 
 		<script type="module">
-			import { start } from "/_app/start-91e6bf71.js";
+			import { start } from "/_app/start-4c45d237.js";
 			start({
 				target: document.querySelector("#app"),
 				paths: {"base":"","assets":""},
@@ -34,7 +34,7 @@
 					error: null,
 					nodes: [
 						import("/_app/pages/__layout.svelte-546603c3.js"),
-						import("/_app/pages/solutions.svelte-c6519aea.js")
+						import("/_app/pages/solutions.svelte-2a5ef4a2.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -66,7 +66,7 @@
 <section class="svelte-19yxgnf"><h1>Solutions</h1>
     <div id="search-box" class="svelte-19yxgnf"><input type="text" placeholder="Search" class="svelte-19yxgnf" value="">
         <button class="svelte-19yxgnf">Search</button></div>
-    <div id="solution-list"><a sveltekit:prefetch href="/solution/1. Two Sum"><div class="solution svelte-19yxgnf"><h2>1. Two Sum</h2>
+    <div id="solution-list"><a sveltekit:prefetch href="/solution/1. Two Sum/"><div class="solution svelte-19yxgnf"><h2>1. Two Sum</h2>
                     <p>1. Two Sum</p>
                     <p>leetcode, array, two-sum</p></div>
             </a></div>
