--- a/about/index.html
+++ b/about/index.html
@@ -3,24 +3,24 @@
     <head>
         <meta charset="utf-8" />
         <meta name="description" content="" />
-        <link rel="icon" href="./favicon.png" />
+        <link rel="icon" href="/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>About | My Solutions</title>
 
 		
 
-		<link rel="modulepreload" href="/_app/start-4c45d237.js">
+		<link rel="modulepreload" href="/_app/start-d46d4e2f.js">
 		<link rel="modulepreload" href="/_app/chunks/vendor-6f794801.js">
 		<link rel="modulepreload" href="/_app/chunks/singletons-12a22614.js">
 		<link rel="modulepreload" href="/_app/chunks/paths-28a87002.js">
 		<link rel="modulepreload" href="/_app/pages/__layout.svelte-546603c3.js">
-		<link rel="modulepreload" href="/_app/pages/about.svelte-96fa4edd.js">
+		<link rel="modulepreload" href="/_app/pages/about.svelte-539ba02d.js">
 		<link rel="stylesheet" href="/_app/assets/start-464e9d0a.css">
 		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-05c27513.css">
 		<link rel="stylesheet" href="/_app/assets/pages/about.svelte-7fca8378.css">
 
 		<script type="module">
-			import { start } from "/_app/start-4c45d237.js";
+			import { start } from "/_app/start-d46d4e2f.js";
 			start({
 				target: document.querySelector("#app"),
 				paths: {"base":"","assets":""},
@@ -28,13 +28,13 @@
 				host: location.host,
 				route: true,
 				spa: false,
-				trailing_slash: "never",
+				trailing_slash: "ignore",
 				hydrate: {
 					status: 200,
 					error: null,
 					nodes: [
 						import("/_app/pages/__layout.svelte-546603c3.js"),
-						import("/_app/pages/about.svelte-96fa4edd.js")
+						import("/_app/pages/about.svelte-539ba02d.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -65,6 +65,8 @@
 
 <section class="svelte-k077m8"><h1>About</h1>
     <p>Hello.</p>
+    <br>
+    <div><a href="https://leetcode.card.workers.dev/" target="_blank"><img alt="leetcode-card" src="https://leetcode.card.workers.dev/?username=JacobLinCool&style=auto&font=&extension=null"></a></div>
 </section></main>
 
 <footer></footer>
