--- a/solution/1. Two Sum/index.html
+++ b/solution/1. Two Sum/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <meta name="description" content="" />
-        <link rel="icon" href="./favicon.png" />
+        <link rel="icon" href="/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>1. Two Sum | My Solutions</title>
 
 		
 
-		<link rel="modulepreload" href="/_app/start-4c45d237.js">
+		<link rel="modulepreload" href="/_app/start-d46d4e2f.js">
 		<link rel="modulepreload" href="/_app/chunks/vendor-6f794801.js">
 		<link rel="modulepreload" href="/_app/chunks/singletons-12a22614.js">
 		<link rel="modulepreload" href="/_app/chunks/paths-28a87002.js">
@@ -20,7 +20,7 @@
 		<link rel="stylesheet" href="/_app/assets/pages/solution/_name_.svelte-5fcf63f5.css">
 
 		<script type="module">
-			import { start } from "/_app/start-4c45d237.js";
+			import { start } from "/_app/start-d46d4e2f.js";
 			start({
 				target: document.querySelector("#app"),
 				paths: {"base":"","assets":""},
@@ -28,7 +28,7 @@
 				host: location.host,
 				route: true,
 				spa: false,
-				trailing_slash: "never",
+				trailing_slash: "ignore",
 				hydrate: {
 					status: 200,
 					error: null,
@@ -38,7 +38,7 @@
 					],
 					page: {
 						host: location.host, // TODO this is redundant
-						path: "\u002Fsolution\u002F1.%20Two%20Sum",
+						path: "\u002Fsolution\u002F1.%20Two%20Sum\u002F",
 						query: new URLSearchParams(""),
 						params: {name:"1. Two Sum"}
 					}
