deploy: 8495d42134bafcf8c52ba8219f60beabb5772879

--- a/about/index.html
+++ b/about/index.html
@@ -9,18 +9,17 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-7af50c4c.js">
+		<link rel="modulepreload" href="/_app/start-418f7a70.js">
 		<link rel="modulepreload" href="/_app/chunks/vendor-6f794801.js">
-		<link rel="modulepreload" href="/_app/chunks/singletons-12a22614.js">
 		<link rel="modulepreload" href="/_app/chunks/paths-28a87002.js">
 		<link rel="modulepreload" href="/_app/pages/__layout.svelte-546603c3.js">
-		<link rel="modulepreload" href="/_app/pages/about.svelte-36007cb9.js">
+		<link rel="modulepreload" href="/_app/pages/about.svelte-6b2e7611.js">
 		<link rel="stylesheet" href="/_app/assets/start-464e9d0a.css">
 		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-05c27513.css">
 		<link rel="stylesheet" href="/_app/assets/pages/about.svelte-7fca8378.css">
 
 		<script type="module">
-			import { start } from "/_app/start-7af50c4c.js";
+			import { start } from "/_app/start-418f7a70.js";
 			start({
 				target: document.querySelector("#app"),
 				paths: {"base":"","assets":""},
@@ -34,7 +33,7 @@
 					error: null,
 					nodes: [
 						import("/_app/pages/__layout.svelte-546603c3.js"),
-						import("/_app/pages/about.svelte-36007cb9.js")
+						import("/_app/pages/about.svelte-6b2e7611.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -66,7 +65,7 @@
 <section class="svelte-k077m8"><h1>About</h1>
     <p>Hello.</p>
     <br>
-    <div><a href="https://leetcode.card.workers.dev/" target="_blank"><img alt="leetcode-card" src="https://leetcode.card.workers.dev/JacobLinCool?theme=nord&font=ruthie"></a></div>
+    <div><a href="https://leetcode.card.workers.dev/" target="_blank"><img alt="leetcode-card" src="https://leetcode.card.workers.dev/JacobLinCool?theme=nord&font=milonga"></a></div>
 </section></main>
 
 <footer></footer>
