deploy: 2c48a9916d800400c804cd7d8610c2cdeb581137

--- a/solutions/index.html
+++ b/solutions/index.html
@@ -68,6 +68,9 @@
     <div id="solution-list"><a sveltekit:prefetch href="/solution/1. Two Sum/"><div class="solution svelte-19yxgnf"><h2>1. Two Sum</h2>
                     <p>1. Two Sum</p>
                     <p>leetcode, array, two-sum</p></div>
+            </a><a sveltekit:prefetch href="/solution/1290. Convert Binary Number in a Linked List to Integer/"><div class="solution svelte-19yxgnf"><h2>1290. Convert Binary Number in a Linked List to Integer</h2>
+                    <p>1290. Convert Binary Number in a Linked List to Integer</p>
+                    <p>leetcode, linked-list, math</p></div>
             </a></div>
 </section></main>
 
@@ -75,7 +78,7 @@
 
 
 
-			<script type="application/json" data-type="svelte-data" data-url="/data/list.json">{"status":200,"statusText":"","headers":{"content-type":"text/plain;charset=UTF-8"},"body":"[{\"name\":\"1. Two Sum\",\"title\":\"1. Two Sum\",\"tags\":[\"leetcode\",\"array\",\"two-sum\"]}]"}</script>
+			<script type="application/json" data-type="svelte-data" data-url="/data/list.json">{"status":200,"statusText":"","headers":{"content-type":"text/plain;charset=UTF-8"},"body":"[{\"name\":\"1. Two Sum\",\"title\":\"1. Two Sum\",\"tags\":[\"leetcode\",\"array\",\"two-sum\"]},{\"name\":\"1290. Convert Binary Number in a Linked List to Integer\",\"title\":\"1290. Convert Binary Number in a Linked List to Integer\",\"tags\":[\"leetcode\",\"linked-list\",\"math\"]}]"}</script>
 		</div>
     </body>
 </html>
